Edited the Administrator label in user

--- a/constituents.html
+++ b/constituents.html
@@ -13,7 +13,10 @@
     <div class="side-nav">
       <div class="user-icon">
         <img src="./images/user-icon.png" alt="User Icon" />
-        <span>John Marikit</span>
+        <p><span>John Marikit</span>
+        <small class="admin">Administrator</small>
+        </p>
+
       </div>
       <div class="nav-links">
         <a href="dashboard.html" class="icons active"><img src="./images/dash-icon.png" alt="">Dashboard</a>
