Change background and font login.

--- a/login.html
+++ b/login.html
@@ -7,10 +7,10 @@
     <title>Log In form</title>
 </head>
 <body>
-    <img src="pque logo.png" alt="pque logo" class="capy-img" id="bg-logo">
+    <img src="./images/background.jpeg" alt="pque logo" class="capy-img" id="bg-logo">
     <div class="login-container">
         <div class="img-container">
-            <img src="profile-picture.png" alt="Avatar" class="avatar">
+            <img src="./images/profile-picture.png" alt="Avatar" class="avatar">
          </div>
         <form action="login" method="get">
             <input type="text" name="username" placeholder="Username" required /><br/>
