--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <title>Log In form</title>
 </head>
 <body>
-    <img src="./images/background.jpeg" alt="pque logo" class="capy-img" id="bg-logo">
+    <img src="./images/bg.jpeg" alt="pque logo" class="capy-img" id="bg-logo">
     <div class="login-container">
         <div class="img-container">
             <img src="./images/profile-picture.png" alt="Avatar" class="avatar">
