Dashboard update with searchbar

--- a/dashboard.html
+++ b/dashboard.html
@@ -35,6 +35,37 @@
 
       <a href="#logout" class="logout"><img src="./images/logout.png" alt="">Log out</a>
     </div>
+
+    <div class="main">
+    <h1>Welcome Admin</h1>
+    <p>Manage and monitor the Office of Public Servants database.</p>
+
+    <div class="search-bar-container">
+        <input type="text" placeholder="Search..." class="search-input" />
+        <button class="search-button">🔍</button>
+        <button class="search-button">🔔</button>
+    </div>
   </div>
+ 
+  <div class="content">
+    <div class="card">
+      <p>Registered Users</p>
+      <h1>120</h1>
+      <button>View Users</button>
+    </div>
+
+    <div class="card">
+      <p>Submitted Forms</p>
+      <h1>320</h1>
+      <button>Manage Forms</button>
+    </div>
+    <div class="card">
+      <p>Inventory</p>
+      <h1>45</h1>
+      <button>Manage Inventory</button>
+    </div>
+  </div>
+ 
+</div>
 </body>
 </html>
